--- a/config/open_jdk_jre.yml
+++ b/config/open_jdk_jre.yml
@@ -17,9 +17,9 @@
 # If Java 7 is required, permgen will be used instead of metaspace. Please see the documentation for more detail.
 ---
 repository_root: "{default.repository.root}/openjdk/{platform}/{architecture}"
-version: 1.8.0_+
+version: 1.8.0_25
 memory_sizes:
-  metaspace: 64m..
+  metaspace: 128m..
   permgen: 64m..
 memory_heuristics:
   heap: 75
